--- a/client/src/features/MainPageHeader/styles.module.scss
+++ b/client/src/features/MainPageHeader/styles.module.scss
@@ -5,6 +5,7 @@
   border-bottom: 1px solid;
   position: sticky;
   top: 0;
+  z-index: 100;
   backdrop-filter: blur(10px);
   @apply border-gray-200;
   @apply pt-4;
