--- a/client/app/styles.module.scss
+++ b/client/app/styles.module.scss
@@ -4,144 +4,22 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: none;
   background-position: center;
-  background-size: cover;
-  background-image: url("../../client/src/assets/Grid.png");
+  opacity: 0;
+  animation: fadeInBackground 1.5s ease-out forwards;
 
-  &__heading {
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: 0.15em solid orange; /* The typwriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: 0.15em; /* Adjust as needed */
-    animation:
-      typing 3.5s steps(40, end),
-      blink-caret 0.75s step-end infinite;
+  &__mini_text {
+    font-size: clamp(8px, 16 / 1520 * 100vw, 32px);
+    font-family: "Mulish";
+    @apply text-gray-800;
   }
 }
-
-@keyframes typing {
-  0.0000%,
-  27.3488% {
-    content: "";
+@keyframes fadeInBackground {
+  from {
+    opacity: 0;
   }
-  1.1395%,
-  26.2093% {
-    content: "d";
-  }
-  2.2791%,
-  25.0698% {
-    content: "de";
-  }
-  3.4186%,
-  23.9302% {
-    content: "S";
-  }
-  4.5581%,
-  22.7907% {
-    content: "deve";
-  }
-  5.6977%,
-  21.6512% {
-    content: "devel";
-  }
-  6.8372%,
-  20.5116% {
-    content: "develo";
-  }
-  7.9767%,
-  19.3721% {
-    content: "Sp";
-  }
-  9.1163%,
-  18.2326% {
-    content: "Spa";
-  }
-  10.2558%,
-  17.0930% {
-    content: "Spar";
-  }
-
-  30.7674%,
-  51.2791% {
-    content: "Spark";
-  }
-  31.9070%,
-  50.1395% {
-    content: "A";
-  }
-  33.0465%,
-  49.0000% {
-    content: "Ad";
-  }
-  34.1860%,
-  47.8605% {
-    content: "Adm";
-  }
-  35.3256%,
-  46.7209% {
-    content: "Admi";
-  }
-  36.4651%,
-  45.5814% {
-    content: "Admin";
-  }
-  37.6047%,
-  44.4419% {
-    content: "writer";
-  }
-
-  54.6977%,
-  75.2093% {
-    content: "";
-  }
-  55.8372%,
-  74.0698% {
-    content: "r";
-  }
-  56.9767%,
-  72.9302% {
-    content: "re";
-  }
-  58.1163%,
-  71.7907% {
-    content: "rea";
-  }
-  59.2558%,
-  70.6512% {
-    content: "read";
-  }
-  60.3953%,
-  69.5116% {
-    content: "reade";
-  }
-  61.5349%,
-  68.3721% {
-    content: "reader";
-  }
-
-  78.6279%,
-  96.8605% {
-    content: "";
-  }
-  79.7674%,
-  95.7209% {
-    content: "h";
-  }
-  80.9070%,
-  94.5814% {
-    content: "hu";
-  }
-  82.0465%,
-  93.4419% {
-    content: "hum";
-  }
-  83.1860%,
-  92.3023% {
-    content: "huma";
-  }
-  84.3256%,
-  91.1628% {
-    content: "human";
+  to {
+    opacity: 1;
   }
 }
