--- a/client/src/features/SideBarBuilder/styles.module.scss
+++ b/client/src/features/SideBarBuilder/styles.module.scss
@@ -2,15 +2,36 @@
 @import "../../shared/styles/mixins";
 @import "../../shared/styles/variables";
 
+.container {
+  display: flex;
+  justify-content: space-between;
+  width: 36.7%;
+}
+
+
 .menu {
+//   overflow-y: scroll;
+//     ::-webkit-scrollbar {
+//     display: none;
+// }
   top: 0;
   position: sticky;
-  width: clamp(225px, 23.436vw, 900px);
-  height: 100vh;
+  width: clamp(150px,15.624vw,600px);
+  min-height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   @apply bg-gray-100;
+  -webkit-font-smoothing: antialiased;
+
+  &__block {
+      width: clamp(200px,20.832vw,800px);
+      min-height: auto;  
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      background-color: white;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  }
 
   &__logo {
     @include respond-to("md") {
