WYSWYG IS DONE EVENTUALLY

--- a/client/app/[locale]/blog/editor/[slug]/styles.scss
+++ b/client/app/[locale]/blog/editor/[slug]/styles.scss
@@ -1,10 +1,17 @@
+.logo {
+  margin-top: clamp(46px, 4.79136vw, 184px);
+  width: clamp(68px, 7.08288vw, 272px);
+  height: clamp(68px, 7.08288vw, 272px);
+}
+
 .ql-editor {
   box-sizing: border-box;
   line-height: 1.42;
   height: 50vh;
   outline: none;
   overflow-y: auto;
-  padding: 12px 15px;
+  @apply pt-4;
+  @apply pr-4;
   -o-tab-size: 4;
   tab-size: 4;
   -moz-tab-size: 4;
@@ -15,8 +22,6 @@
 
 .ql-container.ql-snow {
   border: 1px solid #ff5722;
-  width: 80%;
-  margin: auto;
 }
 
 .ql-toolbar.ql-snow {
@@ -98,4 +103,35 @@
   .ql-picker-item[data-label]:not([data-label=""])::before {
   content: attr(data-label);
   @apply mr-4;
+}
+
+.ql-snow.ql-toolbar button:hover .ql-fill,
+.ql-snow .ql-toolbar button:hover .ql-fill,
+.ql-snow.ql-toolbar button:focus .ql-fill,
+.ql-snow .ql-toolbar button:focus .ql-fill,
+.ql-snow.ql-toolbar button.ql-active .ql-fill,
+.ql-snow .ql-toolbar button.ql-active .ql-fill,
+.ql-snow.ql-toolbar .ql-picker-label:hover .ql-fill,
+.ql-snow .ql-toolbar .ql-picker-label:hover .ql-fill,
+.ql-snow.ql-toolbar .ql-picker-label.ql-active .ql-fill,
+.ql-snow .ql-toolbar .ql-picker-label.ql-active .ql-fill,
+.ql-snow.ql-toolbar .ql-picker-item:hover .ql-fill,
+.ql-snow .ql-toolbar .ql-picker-item:hover .ql-fill,
+.ql-snow.ql-toolbar .ql-picker-item.ql-selected .ql-fill,
+.ql-snow .ql-toolbar .ql-picker-item.ql-selected .ql-fill,
+.ql-snow.ql-toolbar button:hover .ql-stroke.ql-fill,
+.ql-snow .ql-toolbar button:hover .ql-stroke.ql-fill,
+.ql-snow.ql-toolbar button:focus .ql-stroke.ql-fill,
+.ql-snow .ql-toolbar button:focus .ql-stroke.ql-fill,
+.ql-snow.ql-toolbar button.ql-active .ql-stroke.ql-fill,
+.ql-snow .ql-toolbar button.ql-active .ql-stroke.ql-fill,
+.ql-snow.ql-toolbar .ql-picker-label:hover .ql-stroke.ql-fill,
+.ql-snow .ql-toolbar .ql-picker-label:hover .ql-stroke.ql-fill,
+.ql-snow.ql-toolbar .ql-picker-label.ql-active .ql-stroke.ql-fill,
+.ql-snow .ql-toolbar .ql-picker-label.ql-active .ql-stroke.ql-fill,
+.ql-snow.ql-toolbar .ql-picker-item:hover .ql-stroke.ql-fill,
+.ql-snow .ql-toolbar .ql-picker-item:hover .ql-stroke.ql-fill,
+.ql-snow.ql-toolbar .ql-picker-item.ql-selected .ql-stroke.ql-fill,
+.ql-snow .ql-toolbar .ql-picker-item.ql-selected .ql-stroke.ql-fill {
+  fill: #ff5722;
 }
