--- a/client/src/features/QuillToolBar/styles.scss
+++ b/client/src/features/QuillToolBar/styles.scss
@@ -1,8 +1,7 @@
 #toolbar {
-  width: 80%;
-  margin: auto;
+  width: 100%;
 
-  .ql-bold {
-    color: white;
+  .ql-formats .ql-bold {
+    stroke: white;
   }
 }
