--- a/client/app/[locale]/blog/add-card/[slug]/styles.module.scss
+++ b/client/app/[locale]/blog/add-card/[slug]/styles.module.scss
@@ -25,11 +25,12 @@
     &__icon {
       font-size: clamp(30px, 3.1248vw, 120px);
     }
+  }
 
-    &__previewImage {
-      @apply mt-12;
-      width: clamp(136px, 14.16576vw, 544px);
-      height: clamp(125px, 13.02vw, 500px);
-    }
+  &__previewImage {
+    @apply mt-12;
+    border-radius: clamp(5px, 0.5208vw, 20px);
+    width: clamp(183px, 19.06128vw, 732px);
+    height: clamp(122px, 12.70752vw, 488px);
   }
 }
