--- a/client/src/features/Menu/styles.module.scss
+++ b/client/src/features/Menu/styles.module.scss
@@ -39,12 +39,10 @@
     }
 
     @include respond-to("5xl") {
-      width: clamp(45px, 3.516vw, 180px);
-      height: clamp(40px, 5.263vw, 160px);
+      width: clamp(45px, 90 / 2560 * 100vw, 180px);
+      height: clamp(40px, 80 / 2560 * 100vw, 160px);
     }
 
-    width: clamp(45px, 4.6872vw, 180px);
-    height: clamp(45px, 4.6872vw, 180px);
     cursor: pointer;
     @apply mt-8;
     @apply mb-8;
