--- a/client/src/widgets/Screens/About/styles.module.scss
+++ b/client/src/widgets/Screens/About/styles.module.scss
@@ -1,4 +1,7 @@
 .about {
+  width: 100%;
+  height: 100vh;
+  border: 2px solid blue;
   display: flex;
   flex-direction: column;
   align-items: center;
