--- a/client/app/[locale]/styles.module.scss
+++ b/client/app/[locale]/styles.module.scss
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  min-height: 100vh;
+  // height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
