--- a/client/src/entities/Popup_Components/CodePopup/styles.module.scss
+++ b/client/src/entities/Popup_Components/CodePopup/styles.module.scss
@@ -16,11 +16,12 @@
   flex-direction: column;
   align-items: center;
   @apply p-8;
-  @apply rounded-md;
+  @apply rounded-lg;
 
   &__text {
     text-align: center;
     @apply text-xl;
+    @apply font-medium;
     @apply mt-4;
     @apply mb-4;
   }
