--- a/client/src/features/TextMenu/styles.module.scss
+++ b/client/src/features/TextMenu/styles.module.scss
@@ -37,9 +37,34 @@
     @apply text-xs;
   }
 
-  //   &__border {
-  //     width: 100%;
-  //     height: 4px;
-  //     @apply bg-primary;
-  //   }
+  &__buttons {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    @apply mt-4;
+
+    &__bold,
+    &__italic,
+    &__underline,
+    &__color,
+    &__link,
+    &__alignment {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: 0.3s all;
+      @apply text-2xl;
+      @apply p-2;
+      @apply text-primary;
+      @apply rounded-md;
+      &:hover {
+        @apply bg-dark-upper;
+      }
+    }
+
+    &__chevron {
+      @apply text-sm;
+    }
+  }
 }
