--ADDED CLOSE & OPEN LOGIC FOR MENUS

--- a/client/src/features/TextMenu/styles.module.scss
+++ b/client/src/features/TextMenu/styles.module.scss
@@ -48,6 +48,7 @@
   &__container {
     display: flex;
     align-items: center;
+    cursor: move;
     justify-content: space-between;
 
     &__text {
