--- a/client/src/features/ColorPicker/styles.module.scss
+++ b/client/src/features/ColorPicker/styles.module.scss
@@ -1,9 +1,12 @@
+@import "../../shared/styles/variables";
+@import "../../shared/styles/mixins";
+@import "breakpoint-slicer";
+
 .color_picker {
-  background: #fff;
-  padding: 16px;
+  width: clamp(125px, 250 / 1200 * 100vw, 500px);
+  padding: clamp(8px, 16 / 1200 * 100vw, 32px);
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 250px;
+  @apply bg-white;
 
   &__header {
     display: flex;
@@ -24,53 +27,141 @@
     }
   }
 
+  &__tab {
+    width: clamp(75px, 150 / 1200 * 100vw, 300px);
+    height: clamp(7.5px, 15 / 1200 * 100vw, 30px);
+    margin: auto;
+    @apply mt-4;
+    @apply rounded-full;
+
+    @include respond-to("xl") {
+      width: clamp(75px, 150 / 1360 * 100vw, 300px);
+      height: clamp(7.5px, 15 / 1360 * 100vw, 30px);
+    }
+
+    @include respond-to("2xl") {
+      width: clamp(75px, 150 / 1520 * 100vw, 300px);
+      height: clamp(7.5px, 15 / 1520 * 100vw, 30px);
+    }
+
+    @include respond-to("3xl") {
+      width: clamp(75px, 150 / 1680 * 100vw, 300px);
+      height: clamp(7.5px, 15 / 1680 * 100vw, 30px);
+    }
+
+    @include respond-to("4xl") {
+      width: clamp(75px, 150 / 1920 * 100vw, 300px);
+      height: clamp(7.5px, 15 / 1920 * 100vw, 30px);
+    }
+
+    @include respond-to("5xl") {
+      width: clamp(75px, 150 / 2560 * 100vw, 300px);
+      height: clamp(7.5px, 15 / 2560 * 100vw, 30px);
+    }
+
+    @include respond-to("6xl") {
+      width: clamp(75px, 150 / 3840 * 100vw, 300px);
+      height: clamp(7.5px, 15 / 3840 * 100vw, 30px);
+    }
+  }
+
   &__tabs {
+    width: 50%;
+    margin: auto;
     display: flex;
     justify-content: space-around;
-    margin-bottom: 8px;
+    @apply mt-4;
+    @apply mb-4;
 
     button {
       background: none;
       border: none;
       cursor: pointer;
       padding: 8px;
-      font-size: 14px;
+      font-size: clamp(7px, 14 / 1200 * 100vw, 28px);
+
+      @include respond-to("xl") {
+        font-size: clamp(7px, 14 / 1360 * 100vw, 28px);
+      }
+
+      @include respond-to("2xl") {
+        font-size: clamp(7px, 14 / 1520 * 100vw, 28px);
+      }
+
+      @include respond-to("3xl") {
+        font-size: clamp(7px, 14 / 1680 * 100vw, 28px);
+      }
+
+      @include respond-to("4xl") {
+        font-size: clamp(7px, 14 / 1920 * 100vw, 28px);
+      }
+
+      @include respond-to("5xl") {
+        font-size: clamp(7px, 14 / 2560 * 100vw, 28px);
+      }
+
+      @include respond-to("6xl") {
+        font-size: clamp(7px, 14 / 3840 * 100vw, 28px);
+      }
 
       &.active {
-        border-bottom: 2px solid #000;
+        border-bottom: 2px solid;
+        @apply border-primary;
       }
     }
   }
 
   &__input {
-    margin-bottom: 16px;
+    @apply mt-4;
+    @apply mb-4;
 
     input {
       width: 100%;
       padding: 8px;
-      border: 1px solid #ccc;
+      border: 1px solid;
       border-radius: 4px;
+      @apply border-primary;
     }
   }
 
   &__buttons {
+    width: 100%;
     display: flex;
+    align-items: center;
     justify-content: space-between;
+  }
 
-    button {
-      padding: 8px 16px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
+  &__scheme {
+    width: 100% !important;
+  }
 
-      &:first-of-type {
-        background: #ccc;
-      }
+  @include respond-to("xl") {
+    width: clamp(125px, 250 / 1360 * 100vw, 500px);
+    padding: clamp(8px, 16 / 1360 * 100vw, 32px);
+  }
 
-      &:last-of-type {
-        background: #007bff;
-        color: #fff;
-      }
-    }
+  @include respond-to("2xl") {
+    width: clamp(125px, 250 / 1520 * 100vw, 500px);
+    padding: clamp(8px, 16 / 1520 * 100vw, 32px);
+  }
+
+  @include respond-to("3xl") {
+    width: clamp(125px, 250 / 1680 * 100vw, 500px);
+    padding: clamp(8px, 16 / 1680 * 100vw, 32px);
+  }
+
+  @include respond-to("4xl") {
+    width: clamp(125px, 250 / 1920 * 100vw, 500px);
+    padding: clamp(8px, 16 / 1920 * 100vw, 32px);
+  }
+
+  @include respond-to("5xl") {
+    width: clamp(125px, 250 / 2560 * 100vw, 500px);
+    padding: clamp(8px, 16 / 2560 * 100vw, 32px);
+  }
+
+  @include respond-to("6xl") {
+    width: clamp(125px, 250 / 3840 * 100vw, 500px);
+    padding: clamp(8px, 16 / 3840 * 100vw, 32px);
   }
 }
