--- a/client/src/shared/ui/Buttons_Components/Buttons/styles.module.scss
+++ b/client/src/shared/ui/Buttons_Components/Buttons/styles.module.scss
@@ -124,6 +124,46 @@
   }
 }
 
+.button--regular--xxxs {
+  @extend .button--regular;
+  width: clamp(40px, 80 / 1200 * 100vw, 160px);
+  height: clamp(17.5px, 35 / 1200 * 100vw, 70px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @apply text-sm;
+
+  @include respond-to("xl") {
+    width: clamp(40px, 80 / 1360 * 100vw, 160px);
+    height: clamp(17.5px, 35 / 1360 * 100vw, 70px);
+  }
+
+  @include respond-to("2xl") {
+    width: clamp(40px, 80 / 1520 * 100vw, 160px);
+    height: clamp(17.5px, 35 / 1520 * 100vw, 70px);
+  }
+
+  @include respond-to("3xl") {
+    width: clamp(40px, 80 / 1680 * 100vw, 160px);
+    height: clamp(17.5px, 35 / 1680 * 100vw, 70px);
+  }
+
+  @include respond-to("4xl") {
+    width: clamp(40px, 80 / 1920 * 100vw, 160px);
+    height: clamp(17.5px, 35 / 1920 * 100vw, 70px);
+  }
+
+  @include respond-to("5xl") {
+    width: clamp(40px, 80 / 2560 * 100vw, 160px);
+    height: clamp(17.5px, 35 / 2560 * 100vw, 70px);
+  }
+
+  @include respond-to("6xl") {
+    width: clamp(40px, 80 / 3840 * 100vw, 160px);
+    height: clamp(17.5px, 35 / 3840 * 100vw, 70px);
+  }
+}
+
 .button--regular--xxs--cancel {
   @extend .button--regular;
   width: clamp(40px, 80 / 1200 * 100vw, 160px);
