--- a/client/src/shared/ui/EmptyScreen/styles.module.scss
+++ b/client/src/shared/ui/EmptyScreen/styles.module.scss
@@ -11,28 +11,33 @@
   justify-content: center;
 
   &__image {
+
+    @include respond-to("md") {
+      width: clamp(80px, 450 / 992 * 100vw, 320px);
+    }
+
     @include respond-to("lg") {
-      width: clamp(225px, 450 / 1200 * 100vw, 900px);
+      width: clamp(90px, 450 / 1200 * 100vw, 360px);
     }
 
     @include respond-to("xl") {
-      width: clamp(225px, 450 / 1360 * 100vw, 900px);
+      width: clamp(100px, 450 / 1360 * 100vw, 400px);
     }
 
     @include respond-to("2xl") {
-      width: clamp(300px, 600 / 1520 * 100vw, 1200px);
+      width: clamp(110px, 600 / 1520 * 100vw, 440px);
     }
 
     @include respond-to("3xl") {
-      width: clamp(300px, 600 / 1680 * 100vw, 1200px);
+      width: clamp(120px, 600 / 1680 * 100vw, 480px);
     }
 
     @include respond-to("4xl") {
-      width: clamp(300px, 600 / 1920 * 100vw, 1200px);
+      width: clamp(130px, 600 / 1920 * 100vw, 520px);
     }
 
     @include respond-to("5xl") {
-      width: clamp(300px, 600 / 2560 * 100vw, 1200px);
+      width: clamp(150px, 600 / 2560 * 100vw, 600px);
     }
   }
 
